compiler/tools/fpp-check/test/redef_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_constant.fpp: 2.1
constant x = 1
^
error: redefinition of symbol x
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_constant.fpp: 1.1
constant x = 0
^
